<resources>
    <string name="app_name">GymTracker</string>
    <string name="machineName">Machine Name</string>
    <string name="howMuchWeight">How Much Weight ?</string>
    <string name="countWeight">Count Weight</string>
    <string name="howMuchRepetitions">How Many Repetitions ?</string>
    <string name="countRepetitions">Count Repetitions</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="password">Password</string>
    <string name="healthProblems">I do not have Health Problems</string>
    <string name="signUp">SIGN UP</string>
    <string name="nameIsEmpty">Name is empty!</string>
    <string name="weightIsEmpty">Weight is empty!</string>
    <string name="ageIsEmpty">Age is empty!</string>
    <string name="healthConfirm">Please confirm</string>
    <string name="addNewExe">ADD NEW EXERCISES</string>
    <string name="done">DONE</string>
    <string name="gymTracker" translatable="false">Gym Tracker</string>
    <string name="login">LOG IN</string>
    <string name="dontHaveAnAccount">Don\'t Have an Account ?</string>
    <string name="language">language</string>
    <string name="delete">DELETE</string>
    <string name="legPress" translatable="false">Leg Press</string>
    <string name="legCurl" translatable="false">Leg Curl</string>
    <string name="legExtension" translatable="false">Leg Extension</string>
    <string name="hipAbduction" translatable="false">Hip Abduction</string>
    <string name="crunch" translatable="false">Crunch</string>
    <string name="pulldown" translatable="false">Pulldown</string>
    <string name="armAdduction" translatable="false">Arm Adduction</string>
    <string name="armCurl" translatable="false">Arm Curl</string>
    <string name="armExtension" translatable="false">Arm Extension</string>
    <string name="connected">Connected!</string>
    <string name="checkCredentials">Please Check Your login Credentials</string>
    <string name="emailEmpty">Email is empty!</string>
    <string name="enterValidEmail">Enter the valid email</string>
    <string name="passwordEmpty">Password is empty</string>
    <string name="passwordLength">Length of password is more than 6</string>
    <string name="repetitions">Repetitions</string>
    <string name="registered">"You are successfully Registered"</string>
    <string name="notRegister">You are not Registered! Try again</string>

</resources>